package com.example.project;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

import androidx.test.espresso.assertion.ViewAssertions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
public class SignUpActivityTest {
    @Rule
    public ActivityScenarioRule<SignUpActivity> activityRule = new ActivityScenarioRule<>(SignUpActivity.class);

    @Test
    public void testActivityLaunch() {
        onView(withId(R.id.signupfields))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
    }
    @Test
    public void noUsername() {
        onView(withId(R.id.signupfields))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
        onView(withId(R.id.editZip)).perform(typeText("90007"));
        onView(withId(R.id.editusername)).perform(typeText("testingsignup@gmail.com"));
        onView(withId(R.id.editPassword)).perform(typeText("password"));
        onView(withId(R.id.signup_button)).perform(click());
        onView(withId(R.id.signuptext)).check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
    }
    @Test
    public void noEmail() {
        onView(withId(R.id.signupfields))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
        onView(withId(R.id.editName)).perform(typeText("testingsignup"));
        onView(withId(R.id.editZip)).perform(typeText("90007"));
        onView(withId(R.id.editPassword)).perform(typeText("password"));
        onView(withId(R.id.signup_button)).perform(click());
        onView(withId(R.id.signuptext)).check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
    }
    @Test
    public void noPassword() {
        onView(withId(R.id.signupfields))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
        onView(withId(R.id.editName)).perform(typeText("testingsignup"));
        onView(withId(R.id.editZip)).perform(typeText("90007"));
        onView(withId(R.id.editusername)).perform(typeText("testingsignup@gmail.com"));
        onView(withId(R.id.signup_button)).perform(click());
        onView(withId(R.id.signuptext)).check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
    }
    @Test
    public void noZipcode() {
        onView(withId(R.id.signupfields))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
        onView(withId(R.id.editName)).perform(typeText("testingsignup"));
        onView(withId(R.id.editusername)).perform(typeText("testingsignup@gmail.com"));
        onView(withId(R.id.editPassword)).perform(typeText("password"));
        onView(withId(R.id.signup_button)).perform(click());
        onView(withId(R.id.signuptext)).check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
    }
    @Test
    public void correctInfo() {
        onView(withId(R.id.signupfields))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
        onView(withId(R.id.editName)).perform(typeText("testingsignup"));
        onView(withId(R.id.editusername)).perform(typeText("testingsignup@gmail.com"));
        onView(withId(R.id.editZip)).perform(typeText("90007"));
        onView(withId(R.id.editPassword)).perform(typeText("password"));
        onView(withId(R.id.signup_button)).perform(click());
        onView(withId(R.id.passwordTextview)).check(ViewAssertions.matches(ViewMatchers.isDisplayed()));
    }
}
